spec/support/edi_files/invalid/6.EDI
ISA*00*          *00*          *ZZ*ANCO           *ZZ*ANDPRE         *121225*1000*U*00401*000003224*1*P*>…GS*FA*ANCO*ANDPRE*20121225*1000*1362*X*004010…ST*997*0001…AK1*PC*3303…AK9*A*1*1*1…SE*4*0001…GE*1*1362…IEA*1*000003224…ISA*00*          *00*          *ZZ*ANCO          *ZZ*ANDPRE         *121225*1000*U*00401*000003225*1*P*>…GS*FA*ANCO*ANDPRE*20121225*1000*1363*X*004010…ST*997*0001…AK1*PO*3304…AK9*A*1*1*1…SE*4*0001…GE*1*1363…IEA*1*000003225…